--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
