--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.2.0",
     "formik": "^2.4.5",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
